<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient_2"
tools:context=".playfriend">
<LinearLayout
    android:id="@+id/linear1"
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">
    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1"
        android:textColor="@color/white"
        android:textSize="50sp"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/playerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="40dp"
    android:orientation="horizontal"
    android:layout_below="@+id/linear1"
    android:paddingBottom="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview2"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginEnd="32dp"
        android:textColor="@color/white"
        />

</LinearLayout>

<GridLayout
    android:id="@+id/Grid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="3"
    android:layout_marginTop="100dp"
    android:layout_below="@+id/playerLayout"
    android:layout_centerHorizontal="true">
    <Button
        android:id="@+id/btn1"
        style="@style/RectButton"
        android:onClick="check"
        app:backgroundTint="@color/pink1"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/btn2"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn3"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn4"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn5"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn6"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn7"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn8"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>
    <Button
        android:id="@+id/btn9"
        style="@style/RectButton"
        android:layout_margin="8dp"
        app:backgroundTint="@color/pink1"
        android:onClick="check"/>

</GridLayout>
<Button
    android:id="@+id/reset"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/Grid"
    android:layout_width="230dp"
    android:layout_height="70dp"
    android:layout_centerHorizontal="true"
    android:text="@string/reset"
    android:backgroundTint="#C0CA33"
    android:onClick="reset"
    />
</RelativeLayout>