<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
           />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/game"
            android:paddingBottom="30dp"
            />

        <GridLayout
            android:id="@+id/homeGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:useDefaultMargins="true">
        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                card_view:cardCornerRadius="16dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                tools:ignore="MissingClass">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_avatar"  /><!-- Replace with your image -->


                    <TextView
                        android:id="@+id/log_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Copy and Modify the above block for other cards -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                card_view:cardCornerRadius="16dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                tools:ignore="MissingClass">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/play_friend" />


                    <TextView
                        android:id="@+id/play_friend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_friend"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                card_view:cardCornerRadius="16dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                tools:ignore="MissingClass">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/play" />

                    <TextView
                        android:id="@+id/play_computer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play_computer"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:paddingTop="8dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                card_view:cardCornerRadius="16dp"
                card_view:cardElevation="8dp"
                card_view:cardBackgroundColor="@android:color/white"
                tools:ignore="MissingClass">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/leaderboard" />

                    <TextView
                        android:id="@+id/Leader_Broard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Leader_Broard"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:paddingTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </GridLayout>

        <Button
            android:id="@+id/exit_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Exit"
            android:layout_marginTop="24dp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>
